c4prj2_input/grade.txt
Grading at Mon Apr 22 16:48:02 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘main’:
input.c:74:12: error: unused variable ‘deck’ [-Werror=unused-variable]
   deck_t * deck = hand_from_string(str, fc);
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
